New Packing Installation Method